# T-70

./: Cargo.toml  LICENSE  build.rs  readme.md
.cargo/: config.toml
c_src/: AbsoluteValue.cxx  AbsoluteValue.h  DeleteSelfFromDisk.cxx  DeleteSelfFromDisk.h  GetProcessCountViaSnapShot.cxx  GetProcessCountViaSnapShot.h  GetUniqueUserCountViaSnapshot.cxx  GetUniqueUserCountViaSnapshot.h  InlinedShellcodeExecution.cxx  InlinedShellcodeExecution.h  VmDetection.cxx  VmDetection.h  debug.h  intelligence.h
scripts/: download_cascadeclassifier.py  download_mobilenetv2.py  download_mobilnetv2.py  download_resnet.py  download_yolov5.py  requirements.txt
src/: main.rs
src/modules/: camera.rs  classifier.rs  embeddings.rs  face_detection.rs  mod.rs  similarity.rs
