[package]
name = "T-70"
version = "0.1.0"
edition = "2021"

[profile.dev]
trim-path = true
opt-level = 1
lto = false

[profile.release]
incremental = false
strip = "symbols"
panic = "abort"
trim-path = true
opt-level = "s"
lto = false
overflow-checks = false
debug-assertions = false

[dependencies]
opencv = {  version = "0.92.2" , default-features = true}

[build-dependencies]
cc = "1.1.15"
